chp05-services/set541-ingress/set541-2-bar-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-nodeport
  namespace: chp05-set541
spec:
  type: NodePort # not LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30125
  selector:
    app: kubia
