chp05-services/set541-ingress/set541-2-foo-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-nodeport
  namespace: chp05-set541
spec:
  type: NodePort # not LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30124
  selector:
    app: foo
